[package]
name = "yubi_opt"
version = "0.1.0"
edition = "2018"
homepage = "https://github.com/Alex1607/yubico_otp"
readme = "README.md"
description = "An easy to use Yubico OTPs implementation."
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"
doc = true
test = true
bench = false

[dependencies]
rand = "0.8.5"
ureq = "2.6.2"
derive_builder = "0.12.0"
sha1 = "0.10.5"
hmac = "0.12.1"
base64 = "0.21.0"